--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         body {
             font-family: 'Inter', sans-serif;
-            background: #1e40af;
+            background: #dc2626;
             min-height: 100vh;
             display: flex;
             align-items: center;
@@ -48,7 +48,7 @@
         .logo-text {
             font-size: 1.8rem;
             font-weight: 700;
-            color: #1e40af;
+            color: #dc2626;
         }
 
         .logo-symbol {
@@ -59,7 +59,7 @@
         .divider {
             width: 60px;
             height: 4px;
-            background: #1e40af;
+            background: #dc2626;
             margin: 0 auto 2rem;
             border-radius: 2px;
         }
@@ -67,7 +67,7 @@
         h1 {
             font-size: 2.5rem;
             font-weight: 700;
-            color: #1e40af;
+            color: #dc2626;
             margin-bottom: 1rem;
         }
 
@@ -100,19 +100,19 @@
         }
 
         .lang-btn:hover {
-            border-color: #1e40af;
-            color: #1e40af;
+            border-color: #dc2626;
+            color: #dc2626;
             transform: translateY(-2px);
         }
 
         .lang-btn.english {
-            background: #1e40af;
+            background: #dc2626;
             color: white;
-            border-color: #1e40af;
+            border-color: #dc2626;
         }
 
         .lang-btn.english:hover {
-            background: #1e3a8a;
+            background: #b91c1c;
             transform: translateY(-2px);
         }
 
@@ -123,8 +123,8 @@
 
         .lang-btn.spanish:hover {
             background: #f8fafc;
-            border-color: #1e40af;
-            color: #1e40af;
+            border-color: #dc2626;
+            color: #dc2626;
         }
 
         .flag-icon {
@@ -136,11 +136,11 @@
             padding: 1.5rem;
             background: #f8fafc;
             border-radius: 8px;
-            border-left: 4px solid #1e40af;
+            border-left: 4px solid #dc2626;
         }
 
         .study-info h3 {
-            color: #1e40af;
+            color: #dc2626;
             font-size: 1.1rem;
             font-weight: 600;
             margin-bottom: 0.5rem;
