--- a/spanish.html
+++ b/spanish.html
@@ -15,7 +15,7 @@
 
         body {
             font-family: 'Inter', sans-serif;
-            background: #f8fafc;
+            background: #dc2626;
             color: #333;
             line-height: 1.6;
         }
@@ -55,7 +55,7 @@
         .logo-text {
             font-size: 1.5rem;
             font-weight: 700;
-            color: #1e40af;
+            color: #dc2626;
         }
 
         .language-selector {
@@ -74,19 +74,19 @@
         }
 
         .lang-btn.active {
-            background: #1e40af;
+            background: #dc2626;
             color: white;
-            border-color: #1e40af;
+            border-color: #dc2626;
         }
 
         .lang-btn:hover {
-            border-color: #1e40af;
-            color: #1e40af;
+            border-color: #dc2626;
+            color: #dc2626;
         }
 
         /* Hero Section */
         .hero {
-            background: linear-gradient(135deg, #1e40af 0%, #3b82f6 100%);
+            background: #dc2626;
             color: white;
             padding: 4rem 0;
             position: relative;
@@ -174,7 +174,7 @@
         .form-group select:focus,
         .form-group textarea:focus {
             outline: none;
-            border-color: #1e40af;
+            border-color: #dc2626;
         }
 
         .form-row {
@@ -185,7 +185,7 @@
 
         .cta-btn {
             width: 100%;
-            background: linear-gradient(135deg, #1e40af 0%, #06b6d4 100%);
+            background: #dc2626;
             color: white;
             padding: 1rem 2rem;
             border: none;
@@ -199,7 +199,8 @@
 
         .cta-btn:hover {
             transform: translateY(-2px);
-            box-shadow: 0 10px 20px rgba(30, 64, 175, 0.3);
+            box-shadow: 0 10px 20px rgba(220, 38, 38, 0.4);
+            background: #b91c1c;
         }
 
         .trust-badges {
@@ -218,7 +219,7 @@
         }
 
         .trust-badge i {
-            color: #10b981;
+            color: #dc2626;
         }
 
         /* What's Included Section */
@@ -231,7 +232,7 @@
             text-align: center;
             font-size: 2.5rem;
             font-weight: 700;
-            color: #1f2937;
+            color: #dc2626;
             margin-bottom: 3rem;
         }
 
@@ -258,7 +259,7 @@
         .benefit-icon {
             width: 60px;
             height: 60px;
-            background: linear-gradient(135deg, #1e40af 0%, #3b82f6 100%);
+            background: #dc2626;
             border-radius: 50%;
             display: flex;
             align-items: center;
@@ -296,7 +297,7 @@
         .eligibility-text h2 {
             font-size: 2.5rem;
             font-weight: 700;
-            color: #1f2937;
+            color: #dc2626;
             margin-bottom: 1rem;
         }
 
@@ -322,7 +323,7 @@
         .check-icon {
             width: 24px;
             height: 24px;
-            background: #10b981;
+            background: #dc2626;
             border-radius: 50%;
             display: flex;
             align-items: center;
@@ -385,7 +386,7 @@
         /* Contact Section */
         .contact {
             padding: 4rem 0;
-            background: #1f2937;
+            background: #dc2626;
             color: white;
         }
 
@@ -417,7 +418,7 @@
         }
 
         .contact-item i {
-            color: #ef4444;
+            color: white;
             width: 20px;
         }
 
@@ -440,7 +441,7 @@
 
         /* Footer */
         .footer {
-            background: #111827;
+            background: #dc2626;
             color: white;
             padding: 2rem 0;
             text-align: center;
@@ -479,7 +480,7 @@
 
         /* Success Message */
         .success-message {
-            background: #10b981;
+            background: #dc2626;
             color: white;
             padding: 1rem;
             border-radius: 6px;
@@ -543,7 +544,7 @@
         .modal-icon {
             width: 60px;
             height: 60px;
-            background: #10b981;
+            background: #dc2626;
             border-radius: 50%;
             display: flex;
             align-items: center;
