--- a/spanish.html
+++ b/spanish.html
@@ -15,7 +15,7 @@
 
         body {
             font-family: 'Inter', sans-serif;
-            background: #dc2626;
+            background: #5b8fa8;
             color: #333;
             line-height: 1.6;
         }
@@ -55,7 +55,7 @@
         .logo-text {
             font-size: 1.5rem;
             font-weight: 700;
-            color: #dc2626;
+            color: #5b8fa8;
         }
 
         .language-selector {
@@ -74,19 +74,19 @@
         }
 
         .lang-btn.active {
-            background: #dc2626;
+            background: #5b8fa8;
             color: white;
-            border-color: #dc2626;
+            border-color: #5b8fa8;
         }
 
         .lang-btn:hover {
-            border-color: #dc2626;
-            color: #dc2626;
+            border-color: #5b8fa8;
+            color: #5b8fa8;
         }
 
         /* Hero Section */
         .hero {
-            background: #dc2626;
+            background: #5b8fa8;
             color: white;
             padding: 4rem 0;
             position: relative;
@@ -174,7 +174,7 @@
         .form-group select:focus,
         .form-group textarea:focus {
             outline: none;
-            border-color: #dc2626;
+            border-color: #5b8fa8;
         }
 
         .form-row {
@@ -185,7 +185,7 @@
 
         .cta-btn {
             width: 100%;
-            background: #dc2626;
+            background: #5b8fa8;
             color: white;
             padding: 1rem 2rem;
             border: none;
@@ -199,8 +199,8 @@
 
         .cta-btn:hover {
             transform: translateY(-2px);
-            box-shadow: 0 10px 20px rgba(220, 38, 38, 0.4);
-            background: #b91c1c;
+            box-shadow: 0 10px 20px rgba(91, 143, 168, 0.4);
+            background: #4a7a91;
         }
 
         .trust-badges {
@@ -219,7 +219,7 @@
         }
 
         .trust-badge i {
-            color: #dc2626;
+            color: #5b8fa8;
         }
 
         /* What's Included Section */
@@ -232,7 +232,7 @@
             text-align: center;
             font-size: 2.5rem;
             font-weight: 700;
-            color: #dc2626;
+            color: #5b8fa8;
             margin-bottom: 3rem;
         }
 
@@ -259,7 +259,7 @@
         .benefit-icon {
             width: 60px;
             height: 60px;
-            background: #dc2626;
+            background: #5b8fa8;
             border-radius: 50%;
             display: flex;
             align-items: center;
@@ -297,7 +297,7 @@
         .eligibility-text h2 {
             font-size: 2.5rem;
             font-weight: 700;
-            color: #dc2626;
+            color: #5b8fa8;
             margin-bottom: 1rem;
         }
 
@@ -323,7 +323,7 @@
         .check-icon {
             width: 24px;
             height: 24px;
-            background: #dc2626;
+            background: #5b8fa8;
             border-radius: 50%;
             display: flex;
             align-items: center;
@@ -386,7 +386,7 @@
         /* Contact Section */
         .contact {
             padding: 4rem 0;
-            background: #dc2626;
+            background: #5b8fa8;
             color: white;
         }
 
@@ -441,7 +441,7 @@
 
         /* Footer */
         .footer {
-            background: #dc2626;
+            background: #5b8fa8;
             color: white;
             padding: 2rem 0;
             text-align: center;
@@ -480,7 +480,7 @@
 
         /* Success Message */
         .success-message {
-            background: #dc2626;
+            background: #5b8fa8;
             color: white;
             padding: 1rem;
             border-radius: 6px;
@@ -544,7 +544,7 @@
         .modal-icon {
             width: 60px;
             height: 60px;
-            background: #dc2626;
+            background: #5b8fa8;
             border-radius: 50%;
             display: flex;
             align-items: center;
