Emphasize free cholesterol screening for adults 50+

--- a/spanish.html
+++ b/spanish.html
@@ -589,9 +589,9 @@
         <div class="container">
             <div class="hero-content">
                 <div class="hero-text">
-                    <h1>¿Está Su Colesterol Bajo Control?</h1>
-                    <p class="subtitle">Únase a nuestro estudio de investigación y ayude a avanzar el tratamiento del colesterol</p>
-                    <p class="description">Adultos de 50+ años que toman medicamentos para el colesterol pueden calificar para nuestro estudio clínico. Obtenga exámenes, procedimientos y medicamentos relacionados con el estudio sin costo, más compensación por su tiempo y viaje.</p>
+                    <h1>Examen Gratuito de Colesterol para Adultos de 50+</h1>
+                    <p class="subtitle">Chequeo de colesterol sin costo y oportunidad de unirse al estudio</p>
+                    <p class="description">Reciba un examen gratuito de colesterol, revise sus resultados y conozca sobre la participación en el estudio con exámenes, procedimientos y medicamentos sin costo — más compensación por su tiempo y viaje si califica.</p>
                 </div>
                 <div class="hero-form">
                     <h2 class="form-title">Vea Si Califica</h2>
@@ -649,28 +649,28 @@
     <!-- What's Included Section -->
     <section class="whats-included">
         <div class="container">
-            <h2 class="section-title">Lo Que Está Incluido</h2>
+            <h2 class="section-title">Lo Que Obtiene (Gratis)</h2>
             <div class="benefits-grid">
                 <div class="benefit-card">
                     <div class="benefit-icon">
                         <i class="fas fa-user-md"></i>
                     </div>
-                    <h3 class="benefit-title">Exámenes del Estudio</h3>
-                    <p class="benefit-description">Todos los exámenes, procedimientos y medicamentos relacionados con el estudio sin costo para usted</p>
+                    <h3 class="benefit-title">Examen de Colesterol</h3>
+                    <p class="benefit-description">Chequeo gratuito de colesterol para adultos de 50+ con una visita sencilla</p>
                 </div>
                 <div class="benefit-card">
                     <div class="benefit-icon">
                         <i class="fas fa-dollar-sign"></i>
                     </div>
-                    <h3 class="benefit-title">Compensación</h3>
-                    <p class="benefit-description">Reembolso por su tiempo y gastos de viaje</p>
+                    <h3 class="benefit-title">Revisión de Resultados</h3>
+                    <p class="benefit-description">Revisión personalizada de sus resultados de colesterol y próximos pasos</p>
                 </div>
                 <div class="benefit-card">
                     <div class="benefit-icon">
                         <i class="fas fa-heart"></i>
                     </div>
-                    <h3 class="benefit-title">Cuidado Especializado</h3>
-                    <p class="benefit-description">Cuidado médico especializado durante toda la duración del estudio</p>
+                    <h3 class="benefit-title">Si Califica</h3>
+                    <p class="benefit-description">Atención del estudio sin costo, más compensación por tiempo y viaje</p>
                 </div>
             </div>
         </div>
@@ -682,7 +682,7 @@
             <div class="eligibility-content">
                 <div class="eligibility-text">
                     <h2>¿Es Elegible?</h2>
-                    <p>Verifique si cumple con nuestros requisitos del estudio:</p>
+                    <p>Vea si califica para un examen gratuito de colesterol y participación en el estudio:</p>
                     <ul class="eligibility-list">
                         <li class="eligibility-item">
                             <div class="check-icon">
@@ -694,7 +694,7 @@
                             <div class="check-icon">
                                 <i class="fas fa-check"></i>
                             </div>
-                            <span>Toma medicamentos para el colesterol</span>
+                            <span>Interesado en un examen de colesterol o toma medicamentos para el colesterol</span>
                         </li>
                         <li class="eligibility-item">
                             <div class="check-icon">
@@ -759,8 +759,8 @@
         <div class="container">
             <div class="contact-content">
                 <div class="contact-info">
-                    <h2>¿Listo para Comenzar?</h2>
-                    <p>Contáctenos hoy para obtener más información sobre participar en nuestro estudio de investigación del colesterol.</p>
+                    <h2>¿Listo para su Examen Gratis?</h2>
+                    <p>Contáctenos hoy para programar su examen gratuito de colesterol y hablar sobre la participación en el estudio.</p>
                     <div class="contact-item">
                         <i class="fas fa-phone"></i>
                         <span>908-798-8373</span>
