--- a/english.html
+++ b/english.html
@@ -589,9 +589,9 @@
         <div class="container">
             <div class="hero-content">
                 <div class="hero-text">
-                    <h1>Is Your Cholesterol Under Control?</h1>
-                    <p class="subtitle">Join our research study and help advance cholesterol treatment</p>
-                    <p class="description">Adults 50+ taking cholesterol medication may qualify for our clinical study. Get study-related exams, procedures, and medications at no cost, plus compensation for your time and travel.</p>
+                    <h1>Free Cholesterol Health Screening for Adults 50+</h1>
+                    <p class="subtitle">No-cost cholesterol check plus a chance to join our research study</p>
+                    <p class="description">Get a complimentary cholesterol health screen, review your results, and learn about study participation with exams, procedures, and medication provided at no cost — plus compensation for time and travel if you qualify.</p>
                 </div>
                 <div class="hero-form">
                     <h2 class="form-title">See If You Qualify</h2>
@@ -649,28 +649,28 @@
     <!-- What's Included Section -->
     <section class="whats-included">
         <div class="container">
-            <h2 class="section-title">What's Included</h2>
+            <h2 class="section-title">What You Get (Free)</h2>
             <div class="benefits-grid">
                 <div class="benefit-card">
                     <div class="benefit-icon">
                         <i class="fas fa-user-md"></i>
                     </div>
-                    <h3 class="benefit-title">Study-Related Exams</h3>
-                    <p class="benefit-description">All study-related exams, procedures, and medications at no cost to you</p>
+                    <h3 class="benefit-title">Cholesterol Screening</h3>
+                    <p class="benefit-description">Free cholesterol health screen for adults 50+ with a simple visit</p>
                 </div>
                 <div class="benefit-card">
                     <div class="benefit-icon">
                         <i class="fas fa-dollar-sign"></i>
                     </div>
-                    <h3 class="benefit-title">Compensation</h3>
-                    <p class="benefit-description">Reimbursement for your time and travel expenses</p>
+                    <h3 class="benefit-title">Result Review</h3>
+                    <p class="benefit-description">Personalized review of your cholesterol results and next steps</p>
                 </div>
                 <div class="benefit-card">
                     <div class="benefit-icon">
                         <i class="fas fa-heart"></i>
                     </div>
-                    <h3 class="benefit-title">Specialized Care</h3>
-                    <p class="benefit-description">Specialized medical care throughout the study duration</p>
+                    <h3 class="benefit-title">If You Qualify</h3>
+                    <p class="benefit-description">Study care at no cost, plus compensation for time and travel</p>
                 </div>
             </div>
         </div>
@@ -682,7 +682,7 @@
             <div class="eligibility-content">
                 <div class="eligibility-text">
                     <h2>Are You Eligible?</h2>
-                    <p>Check if you meet our study requirements:</p>
+                    <p>See if you qualify for a free cholesterol screening and study participation:</p>
                     <ul class="eligibility-list">
                         <li class="eligibility-item">
                             <div class="check-icon">
@@ -694,7 +694,7 @@
                             <div class="check-icon">
                                 <i class="fas fa-check"></i>
                             </div>
-                            <span>Take cholesterol medication</span>
+                            <span>Interested in a cholesterol screening or on cholesterol medication</span>
                         </li>
                         <li class="eligibility-item">
                             <div class="check-icon">
@@ -759,8 +759,8 @@
         <div class="container">
             <div class="contact-content">
                 <div class="contact-info">
-                    <h2>Ready to Get Started?</h2>
-                    <p>Contact us today to learn more about participating in our cholesterol research study.</p>
+                    <h2>Ready for Your Free Screening?</h2>
+                    <p>Contact us today to schedule your free cholesterol health screening and discuss study participation.</p>
                     <div class="contact-item">
                         <i class="fas fa-phone"></i>
                         <span>908-798-8373</span>
